Try preventing bg shifting on mobile scroll

--- a/css/styling.css
+++ b/css/styling.css
@@ -26,6 +26,12 @@ body {
     background-repeat: no-repeat;
     font-family: monospace;
     height: 100vh;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100vh;
+    z-index: -1;
 }
 
 main {
